= tefil changelog

== Master (for 0.0.4)
* Add bin/packpercent .
* Add usage banner.
* Rename bin/formcolumn to columnform
* Add bin/indentstat .
* Add bin/indentconv .

== Version 0.0.3 [2013-05-10] released
* Rename TextFilter to Tefil
* Add Tefil::ColumnFormer
* Add -l(left alline) option to formcolumn command.

== Version 0.0.2 [2013-04-18] released
* Adjust to builtinextension-0.1.0.

== Version 0.0.1
* Change indent character from tab to two spaces.
* Rename textfilter to linesub
* Add bin/lineescapezsh
* Add bin/formcolumn
* Add -g option to bin/linesub

== Version 0.0.0
* Initial release.