@@ -22,7 +22,7 @@ op.on("-s char", "--separator=char", "Indicate separator."){|val| OPTIONS[:separ
 op.on("-l"     , "--left-alline"   , "Left alline."){ OPTIONS[:left] = true}
 op.parse!(ARGV)
 
-module Tefil
+class Tefil
   def self.process_stream(in_io, out_io)
     rows = in_io.readlines.map { |line| line.strip.split(INPUT_SEPARATOR) }
     Tefil::ColumnFormer.form(rows, out_io, OPTIONS[:separator], OPTIONS[:left])
