@@ -18,7 +18,7 @@ op.on("-o"     , "--overwrite"     , "Overwrite."){    OPTIONS[:overwrite] = tru
 op.on("-m", "--minimum", "Show minimum width (not zero). If no indent, show '0'."){ OPTIONS[:minimum] = true}
 op.parse!(ARGV)
 
-module Tefil
+class Tefil
   def self.process_stream(in_io, out_io)
     frequencies = {}
     in_io.readlines.each do |line|
