@@ -20,7 +20,7 @@ op.on("-r"    , "--randomize" , "Randomize."){    OPTIONS[:random] = true}
 op.on("-o"    , "--overwrite"    , "Overwrite."){    OPTIONS[:overwrite] = true}
 op.parse!(ARGV)
 
-module Tefil
+class Tefil
   def self.process_stream(in_io, out_io)
     in_io.each do |line|
       if OPTIONS[:sort]
