@@ -20,7 +20,7 @@ op.banner = [
 op.on("-o"    , "--overwrite"    , "Overwrite."){    OPTIONS[:overwrite] = true}
 op.parse!(ARGV)
 
-module Tefil
+class Tefil
   def self.process_stream(in_io, out_io)
     in_io.each do |line|
       out_io.puts line.escape_zsh
